<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ListView</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image">image</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="submit">Submit</string>
    <string name="details_screen">Details screen</string>
    <string name="ivan_mail_com">ivan@mail.com</string>
    <string name="ivan_petrov">Ivan Petrov</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="sample_phone">0785458457</string>
    <string name="error_invalid_password">Passwords do not match!</string>
    <string name="error_unhandled_intent">No application could handle this intent!</string>
    <string name="alert_chooser_title">Select photo from</string>
    <string name="alert_chooser_cancel">Cancel</string>

    <string-array name="alert_chooser_items">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
        <string name="show_all">Show all</string>
        <string name="all_users">All users</string>

</resources>