<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageview_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image"
        android:maxHeight="300dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textview_email"
        style="@style/UserInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageview_profile"
        android:text="@string/ivan_mail_com"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textview_full_name"
        style="@style/UserInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textview_email"
        android:text="@string/ivan_petrov"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageview_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/sample_phone"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_show_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/show_all" />

</RelativeLayout>